--- a/experience.html
+++ b/experience.html
@@ -17,9 +17,9 @@
         </section>        
  
             <nav id="navigation">
-                <a href="http://127.0.0.1:5501/src/aboutme.html">ABOUT ME</a>
-                <a href="http://127.0.0.1:5501/src/blog.html">BLOG</a>
-                <a href="http://127.0.0.1:5501/src/contact.html">CONTACT</a>
+                <a href="http://127.0.0.1:5501/aboutme.html">ABOUT ME</a>
+                <a href="http://127.0.0.1:5501/blog.html">BLOG</a>
+                <a href="http://127.0.0.1:5501/contact.html">CONTACT</a>
             </nav>      
         </section>
         <section id="image1">
