--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="splashpage" alt="background image of trees at the beach">
             <p class="name">AMELIA NUNN</p>
             <p class="FSD">Full Stack Developer</p>
-            <a class="enterbtn" href="http://127.0.0.1:5501/aboutme.html" alt="enter the website">ENTER</a>
+            <a class="enterbtn" href="aboutme.html" alt="enter the website">ENTER</a>
     </div>
 
 </body>
