--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@
         </section>        
  
             <nav id="navigation">
-                <a href="http://127.0.0.1:5501/experience.html">PORTFOLIO</a>
-                <a href="http://127.0.0.1:5501/blog.html">BLOG</a>
-                <a href="http://127.0.0.1:5501/contact.html">CONTACT</a>
+                <a href="experience.html">PORTFOLIO</a>
+                <a href="blog.html">BLOG</a>
+                <a href="contact.html">CONTACT</a>
             </nav>
   
         <section id="image1">
