--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
         </section>        
  
             <nav id="navigation">
-                <a href="http://127.0.0.1:5501/src/aboutme.html">ABOUT ME</a>
-                <a href="http://127.0.0.1:5501/src/experience.html">PORTFOLIO</a>
-                <a href="http://127.0.0.1:5501/src/blog.html">BLOG</a>
+                <a href="aboutme.html">ABOUT ME</a>
+                <a href="experience.html">PORTFOLIO</a>
+                <a href="blog.html">BLOG</a>
             </nav>
   
             <section id="image1">
